Fixed spacing and styling

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -7,4 +7,5 @@ body {
 
 code {
   font-family: monospace;
+  font-size: 14px;
 }
